# csrsef-snapshot

./: .gitattributes  .gitignore  .lfsconfig  Cargo.toml  README.md  auto.py  auto2.py  auto3.py  base.py  best_config.pkl  bs.py  bs2.py  clean.py  combined_files.txt  count.py  dataset.py  erf2.py  make_sqlite.py  node_types.pickle  second_page1.pt  temp.py  test.py  top.pt  train2.py  train2_uneven.py  use.py  work.py
current_datasets/: ai.parquet  clean.py  human.parquet
datasets/: convert_to_sqlite.py  so_dataset.sqlite
dump/: combine.py  split_file.py
section2/: acc.py  bigquery.txt  convert.py  github_to_postgres.py  import_qdrant.py  oai.py  server.py  split.py  ted.py  write_postgres.py
section2/ast_processor/: Cargo.toml
section2/ast_processor/src/: lib.rs
section2/datasets/: clean.py  combine.py
src/: ast_maker.py  batch_maker?.rs  embeddings_maker.rs  main.rs  make_airesponses.rs  migrate.rs  postgres_to_qdrant.rs  raw_inserter.rs  safe.rs
train_after_csrsef/: auto4.py  scheduler.py
training/: azure.py  batch.py  clean.py  client.py  count.py  gemini.py  gpt.py  haiku.py  llama.py  openaibatch.py  server.py  sonnet.py
training/training_based_human/: azure.py  azurebatch.py  gemini.py  gpt.py  local.py  openaibatch.py
