[package]
name = "ast_processor"
version = "0.1.0"
edition = "2021"

[lib]
name = "ast_processor"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
rayon = "1.8"
